--- a/AspNetMvc_EfCodeFirst/Views/Shared/_Layout.cshtml
+++ b/AspNetMvc_EfCodeFirst/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
         </div>*@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-3">
         <div class="container">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="#">Kişiler / Adresler </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -37,17 +37,17 @@
                     <li class="nav-item active">
                         <a class="nav-link" href="/Home/Index">Anasayfa <span class="sr-only">(current)</span></a>
                     </li>
-                    <li class="nav-item">
+                    @*<li class="nav-item">
                         <a class="nav-link" href="#">Link</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link disabled" href="#">Disabled</a>
-                    </li>
+                    </li>*@
                 </ul>
-                <form class="form-inline my-2 my-lg-0">
+                @*<form class="form-inline my-2 my-lg-0">
                     <input class="form-control mr-sm-2" type="search" placeholder="Ara..">
                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Arama</button>
-                </form>
+                </form>*@
             </div>
         </div>
     </nav>
